# PPG-SLAM

./: .gitignore  CMakeLists.txt  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md  debug.txt  gt_mh4.txt  main.cpp  package.xml  trainBow.cpp  try_tumvi.cpp  try_uma.cpp
config/: EuRoC.yaml  TUM-VI-1024.yaml  TUM-VI.yaml  UMA.yaml
feature/: CMakeLists.txt
feature/include/: KeyFrame.h  MapPoint.h  PPGExtractor.h  PPGGraph.h
feature/src/: KeyFrame.cpp  MapPoint.cpp  PPGExtractor.cpp  PPGGraph.cpp
launch/: debug_gdb_launch.py  debug_launch.py  launch.py  pub_euroc_launch.py
map/: CMakeLists.txt
map/include/: Frame.h  Map.h
map/src/: Frame.cpp  Map.cpp
matching/: CMakeLists.txt
matching/include/: MLPnPsolver.h  Matcher.h  Sim3Solver.h
matching/src/: MLPnPsolver.cpp  Matcher.cpp  Sim3Solver.cpp
net/: Backbone.pt  Descriptor.pt  EdgeHeatmap.pt  PointHeatmap.pt
optimizing/: CMakeLists.txt
optimizing/include/: G2oEdge.h  G2oVertex.h  Optimizer.h
optimizing/src/: G2oEdge.cpp  G2oVertex.cpp  Optimizer.cpp  OptimizerGBA.cpp  OptimizerGraph.cpp  OptimizerInertial.cpp  OptimizerLBA.cpp  OptimizerPose.cpp
rviz/: visualizing.rviz
sensors/: CMakeLists.txt
sensors/include/: GeometricCamera.h  IMU.h  KannalaBrandt8.h  Pinhole.h  SE3.h  TwoViewReconstruction.h
sensors/src/: GeometricCamera.cpp  IMU.cpp  KannalaBrandt8.cpp  Pinhole.cpp  TwoViewReconstruction.cpp
system/: CMakeLists.txt
system/include/: LocalMapping.h  LoopClosing.h  System.h  Tracking.h  Viewer.h
system/src/: LocalMapping.cpp  LoopClosing.cpp  System.cpp  Tracking.cpp  Viewer.cpp
test/: pub_euroc.cpp  pub_tum.cpp  pub_uma.cpp
