<?xml version="1.0"?>
<package format="3">
  <name>ppg_slam</name>
  <version>1.0.0</version>
  <description>PPG-SLAM: Real-Time and Robust Visual-Inertial SLAM with Point-Pair Graph</description>
  <maintainer email="zhangcr2729@foxmail.com">zcr</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
